# heroku-fastapi-plotly-demo

./: .env  .gitignore  Procfile.windows  README.md  pyproject.toml  requirements.txt
app/: main.py
app/logic/: collatz.py
app/webservice/routes/: collatz.py  root.py
hello/: views.py
src/collatz_webservice/: __init__.py  main.py
src/collatz_webservice/logic/: collatz.py
src/collatz_webservice/webservice/: utils.py
src/collatz_webservice/webservice/routes/: collatz.py
